# streamlit-tutorials

./: README.md  basics.py  layout.py  main.py  pyproject.toml  special_form.py
pages/: 1_dashboard.py  2_data.py  3_about.py  4_profile.py  5_account.py
