[project]
name = "streamlit-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Al Fayad Chowdhury",email = "fayad.chowdhury@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
